# daily-notes-reminder

./: .gitignore  Cargo.toml  Diagram Flow.pptx  Dockerfile
src/: email_handler.rs  lib.rs  main.rs  random_subject_generator.rs  s3_manager.rs  tomlfile_topics_gen.rs  txtfile_topics_gen.rs
src/common/: email.rs  email_factory.rs  mod.rs  subject_generator.rs  subject_generator_factory.rs  topics_generator.rs  topics_generator_factory.rs
src/styles/: style.html
