[package]
name = "daily_notes_reminder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lopdf = { version = "0.32.0", features = ["pom", "pom_parser"] }
rand = "0.8"
dotenv = "0.15.0"
lettre = "0.11.3"
lettre_email = "0.9.4"
